--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,7 +7,7 @@
 
   <base href="/">
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./wheGym.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Styling -->
